[package]
name = "bizarre"
version = "0.1.0"
authors = ["Alex Adewole <alex@bizar.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true

[dependencies]
yew = {git = "https://github.com/yewstack/yew"}
yew-functional = {git = "https://github.com/yewstack/yew"}
yew-functional-macro = {git = "https://github.com/yewstack/yew"}
yew-router = {git = "https://github.com/yewstack/yew"}
yew-router-macro = {git = "https://github.com/yewstack/yew"}
yew-services = {git = "https://github.com/yewstack/yew"}
serde_derive = "1.0.125"
serde = "1.0.125"
serde_yaml = "0.8.17"
serde_json = "1.0.64"
anyhow = "1.0.40"
markdown = "0.3"
web-sys = "0.3.50"
js-sys = "0.3.50"
wee_alloc = "0.4.5"

[build-dependencies]
markdown = "0.3"
serde = "1.0.125"
serde_json = "1.0.64"
git2 = "0.13.20"